--- a/README
+++ b/README
@@ -8,6 +8,8 @@ ChronoJump can also be used for timing races even with intervals.
 
 Chronojump is Free GPL'd software and hardware.
 
+Chronojump works on GNU/Linux and Windows
+
 All info in Chronojump website:
 http://gnome.org/projects/chronojump/
 
