--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-29  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Added Vietnamese translation.
+	* LINGUAS: Added vi line.
+
 2006-05-25  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* es.po: Updated Spanish translation.
