--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-21  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-07-25  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* LINGUAS: Added fr.
