--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 CHANGELOG:
 
+13 sep 2006
+	added Q Index, Dj Index support in treeview_jumps simple and reactive.
+	Configurable by preferences. Changed database to 0.44 and
+	auto-migration done. Fixes bug: 355309
+
 8 sep 2006
 	event buttons done get unresponsive when a rj jump is cancelled. Fixes bug: 354334
 	fixed? cancelling of pulse
