--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 CHANGELOG:
 
 2 oct 2006
+	first test of reactive jumps with gtk interaction on pulseGTK, and
+	graph on evetnWindow
+
+2 oct 2006
 	- IMPORTANT: on simple jump (and DJ): all the gtk interaction is done only on PulseGTK (not
 	on waitEvent), this seems to solve the thread problems
 	All the rest of events are broken now
