--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 CHANGELOG:
 
+9 oct 2006
+	Added graphConfigureWin, allows to fix vertical margins, and
+	put guides (currently both only on simple jumps). 
+	Nice update button for testing the graph properties
+
 5 oct 2006
 	eventWindow gets cleaned before every new event
 	eventWindow: fixed bug on starting timer on Reactives before the jumper does
